fixed modal card size on smaller screens (text running off)

--- a/css/mobilestyle.css
+++ b/css/mobilestyle.css
@@ -239,3 +239,10 @@
   }
 
 }
+
+@media only screen and (max-width: 450px) {
+
+    .card-get-active {
+      height: 70vw;
+    }
+}
